--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,21 @@
     text-shadow: 1px 1px 2px whitesmoke;
 }
 
+#logo {	
+	width: 20%;
+	border: 5px solid transparent;
+	padding: 20px 25px 20px 25px;
+	border-radius: 30px;
+}
+
+#logo:hover {	
+	border: 5px solid #fa4778;
+	background: -moz-linear-gradient(top, rgba(255,255,255,0.38) 0%, rgba(249,249,249,0.05) 22%, rgba(241,241,241,0.52) 50%, rgba(225,225,225,0.54) 51%, rgba(236,236,236,0.95) 76%, rgba(246,246,246,0.62) 100%);
+	background: -webkit-linear-gradient(top, rgba(255,255,255,0.38) 0%,rgba(249,249,249,0.05) 22%,rgba(241,241,241,0.52) 50%,rgba(225,225,225,0.54) 51%,rgba(236,236,236,0.95) 76%,rgba(246,246,246,0.62) 100%);
+	background: linear-gradient(to bottom, rgba(255,255,255,0.38) 0%,rgba(249,249,249,0.05) 22%,rgba(241,241,241,0.52) 50%,rgba(225,225,225,0.54) 51%,rgba(236,236,236,0.95) 76%,rgba(246,246,246,0.62) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#61ffffff', endColorstr='#9ef6f6f6',GradientType=0 );
+}
+
 body {
     background-image: url("../imgs/pizza.jpg");
     background-size: 140%;
