--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,3 +44,13 @@ body {
     background-image: url("../imgs/pizza.jpg");
     background-size: 140%;
 }
+
+#main{
+    opacity: 0.7;
+    background: white;
+    width: 1200px;
+    height: 500px;
+    margin-left: 10%;
+    margin-top: 5%;
+    border-radius: 3px;
+}
