--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,12 +26,13 @@
 }
 
 #logo {	
-	width: 15%;
+	width: 30%;
+	float: right;
 	border: 5px solid transparent;
 	padding: 20px 25px 20px 25px;
 	border-radius: 30px;
-    margin-left: 63%;
-    margin-top: -6%
+    margin-right: 1%;
+    margin-top: -2%;
 }
 
 #logo:hover {	
@@ -42,10 +43,15 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#61ffffff', endColorstr='#9ef6f6f6',GradientType=0 );
 }
 
+.navbar-brand > img {
+	width: 24px;
+}
+
 body {
     background-image: url("../imgs/pizza.jpg");
     background-size: 140%;
     background-repeat: no-repeat;
+	body { padding-top: 70px; }
 }
 
 #recipes {
