--- a/public/scripts/templates/createRecipe.handlebars
+++ b/public/scripts/templates/createRecipe.handlebars
@@ -5,9 +5,25 @@
     </label>
     <br />
     <label>
+        Preparation time:
+        <input id="tb-preparation-time" class="form-control" type="text">
+    </label>
+    <br />
+    <label>
+        Ingredients:
+        <input id="tb-ingredients" class="form-control" type="text">
+    </label>
+    <br />
+    <label>
+        Instructions:
+        <input id="tb-instructions" class="form-control" type="text">
+    </label>
+    <br />
+    <label>
         Image url:
         <input  id="tb-img" class="form-control" type="text">
     </label>
     <br />
-    <button id="btn-add" class="btn btn-success">Add</button>
+    <button id="btn-add" class="btn btn-success">Submit</button>
+    <button id="btn-add" class="btn btn-danger">Cancel</button>    
 </div>
