added more bootstrap
Signed-off-by: stoychevvasko <stoychev.vassil@gmail.com>

--- a/public/scripts/templates/about.handlebars
+++ b/public/scripts/templates/about.handlebars
@@ -1,3 +1,15 @@
-<div>
-    About:
+<div class="jumbotron fluid-jumbotron">
+	<img alt="logo" class="menu-link" id="logo" src="imgs/logo-text.png">
+	<div class="container">
+		<h1 class="display-2">About</h1>
+		<h2 class="display-1">Created by Team "Gremlin"</h2>		
+		<ul class="lead">
+			<li>Check out our public repository
+				<a href="https://github.com/georgievayo/JavaScriptApplications-Teamwork-GremlinTeam" Alt="GitHub Repository">on GitHub</a>
+			</li>
+			<li>
+				Please also visit <a href="https://telerikacademy.com/" Alt="Telerik Academy Free Courses">Telerik Academy's website</a> for more awesome free education!
+			</li>
+		</ul>
+	</div>
 </div>
