--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,15 @@
     text-shadow: 1px 1px 2px whitesmoke;
 }
 
+.facebook-login {
+	display: block;	
+	vertical-align: middle;
+	margin-top: 50%;
+	margin: 0;
+}
+
 #logo {	
+	display: block;
 	width: 30%;
 	float: right;
 	border: 5px solid transparent;
@@ -37,10 +45,10 @@
 
 #logo:hover {	
 	border: 5px solid #fa4778;
-	background: -moz-linear-gradient(top, rgba(255,255,255,0.38) 0%, rgba(249,249,249,0.05) 22%, rgba(241,241,241,0.52) 50%, rgba(225,225,225,0.54) 51%, rgba(236,236,236,0.95) 76%, rgba(246,246,246,0.62) 100%);
-	background: -webkit-linear-gradient(top, rgba(255,255,255,0.38) 0%,rgba(249,249,249,0.05) 22%,rgba(241,241,241,0.52) 50%,rgba(225,225,225,0.54) 51%,rgba(236,236,236,0.95) 76%,rgba(246,246,246,0.62) 100%);
-	background: linear-gradient(to bottom, rgba(255,255,255,0.38) 0%,rgba(249,249,249,0.05) 22%,rgba(241,241,241,0.52) 50%,rgba(225,225,225,0.54) 51%,rgba(236,236,236,0.95) 76%,rgba(246,246,246,0.62) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#61ffffff', endColorstr='#9ef6f6f6',GradientType=0 );
+	background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 10%, rgba(255,255,255,1) 46%, rgba(255,255,255,1) 59%, rgba(255,255,255,1) 100%);
+	background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,1) 46%,rgba(255,255,255,1) 59%,rgba(255,255,255,1) 100%);
+	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,1) 46%,rgba(255,255,255,1) 59%,rgba(255,255,255,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
 }
 
 body {
@@ -51,9 +59,7 @@ body {
 }
 
 #recipes {
-    background: rgba(255, 255, 255, .7);
-    width: 1200px;
-    height: 450px;
+    background: rgba(255, 255, 255, .7);    
     margin-left: 10%;
     margin-bottom: 5%;
     border-radius: 3px;
@@ -76,7 +82,20 @@ tr {
     height: 435px;
 }
 
-.recipe-image {
-    width: 90%;
-    padding: 5%;
+.recipe-image {    
+	width: 150px;
+}
+
+.jumbotron {
+	background: -moz-linear-gradient(left, rgba(255,255,255,0.78) 0%, rgba(255,255,255,0.78) 42%, rgba(255,255,255,0) 90%, rgba(255,255,255,0) 100%);
+	background: -webkit-linear-gradient(left, rgba(255,255,255,0.78) 0%,rgba(255,255,255,0.78) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
+	background: linear-gradient(to right, rgba(255,255,255,0.78) 0%,rgba(255,255,255,0.78) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c7ffffff', endColorstr='#00ffffff',GradientType=1 );
+}
+
+.jumbotron:hover {
+	background: -moz-linear-gradient(left, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.9) 42%, rgba(255,255,255,0) 90%, rgba(255,255,255,0) 100%);
+	background: -webkit-linear-gradient(left, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.9) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
+	background: linear-gradient(to right, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.9) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6ffffff', endColorstr='#00ffffff',GradientType=1 );
 }
