Fix metrics in data.js

--- a/public/scripts/templates/allRecipes.handlebars
+++ b/public/scripts/templates/allRecipes.handlebars
@@ -20,7 +20,7 @@
 					<p>
 						<span class="glyphicon glyphicon-time">
 						</span>	
-						{{this.preparationTime}}
+						{{this.preparationTime}} min.
 					</p>
 					<h4>
 						<small>
