--- a/public/scripts/templates/login.handlebars
+++ b/public/scripts/templates/login.handlebars
@@ -1,14 +1,28 @@
-<div id="login-form">
-    <label>
-        Username:
-        <input id="tb-username" class="form-control" type="text">
-    </label>
-<br />
-    <label>
-        Password:
-        <input  id="tb-pass" class="form-control" type="password">
-    </label>
-    <br />
-    <button id="btn-login" class="btn btn-success">Login</button>
-    
+<div class="row" style="margin-top:60px" >
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+    	<form role="form">
+			<fieldset>
+				<h2>Please Log In</h2>
+				<hr class="colorgraph">
+				<div class="form-group">
+                    <input type="email" name="email" id="tb-username" class="form-control input-lg" placeholder="Username">
+				</div>
+				<div class="form-group">
+                    <input type="password" name="password" id="tb-pass" class="form-control input-lg" placeholder="Password">
+				</div>
+				<span class="button-checkbox">
+                    <input type="checkbox" name="remember_me" id="remember_me" checked="checked" data-color="info"> Remember Me
+				</span>
+				<hr class="colorgraph">
+				<div class="row">
+					<div class="col-xs-6 col-sm-6 col-md-6">
+                        <input type="submit" class="btn btn-lg btn-success btn-block" id="btn-login" value="Log In">
+					</div>
+					<div class="col-xs-6 col-sm-6 col-md-6">
+						<a href="#/users/register" class="btn btn-lg btn-primary btn-block">Register</a>
+					</div>
+				</div>
+			</fieldset>
+		</form>
+	</div>
 </div>
