--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,3 +8,20 @@
   background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
+
+.login{
+  background: rgba(255, 255, 255, .7);    
+    /*margin-left: 3%;
+    margin-bottom: 1%;*/
+    height: 330px;
+    border-radius: 3px;
+}
+
+.register {
+  background: rgba(255, 255, 255, .7);    
+    /*margin-left: 3%;
+    margin-bottom: 1%;*/
+    margin-top: 6%;
+    height: 500px;
+    border-radius: 3px;
+}
