--- a/public/scripts/templates/login.handlebars
+++ b/public/scripts/templates/login.handlebars
@@ -1,13 +1,15 @@
-<div class="row" style="margin-top:60px" >
+<div class="row login" style="margin-top:60px">
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
     	<form role="form">
 			<fieldset>
 				<h2>Please Log In</h2>
 				<hr class="colorgraph">
-				<div class="form-group">
+				<div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                     <input type="email" name="email" id="tb-username" class="form-control input-lg" placeholder="Username">
 				</div>
-				<div class="form-group">
+				<div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                     <input type="password" name="password" id="tb-pass" class="form-control input-lg" placeholder="Password">
 				</div>
 				<span class="button-checkbox">
