--- a/public/scripts/templates/register.handlebars
+++ b/public/scripts/templates/register.handlebars
@@ -1,13 +1,48 @@
-<div class="forms">
-    <label>
-        Username:
-        <input id="tb-username" class="form-control" type="text">
-    </label>
-<br />
-    <label>
-        Password:
-        <input  id="tb-pass" class="form-control" type="password">
-    </label>
-    <br />
-    <button id="btn-register" class="btn btn-success">Register</button>
+<div class="row register">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+		<form role="form">
+			<h2>Please Register <small>It's free and always will be.</small></h2>
+			<hr class="colorgraph">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-6">
+					<div class="form-group">
+                        <input type="text" name="first_name" id="first_name" class="form-control input-lg" placeholder="First Name" tabindex="1">
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-6">
+					<div class="form-group">
+						<input type="text" name="last_name" id="last_name" class="form-control input-lg" placeholder="Last Name" tabindex="2">
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Display Name" tabindex="3">
+			</div>
+			<div class="form-group">
+				<input type="email" name="username" id="tb-username" class="form-control input-lg" placeholder="Username" tabindex="4">
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-6">
+					<div class="form-group">
+						<input type="password" name="password" id="tb-pass" class="form-control input-lg" placeholder="Password" tabindex="5">
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4 col-sm-3 col-md-3">
+					<span class="button-checkbox">
+                        <input type="checkbox" name="t_and_c" id="t_and_c" value="1"> I Agree
+					</span>
+				</div>
+				<div class="col-xs-8 col-sm-9 col-md-9">
+					 By clicking <strong class="label label-primary">Register</strong>, you agree to the <a href="#" data-toggle="modal" data-target="#t_and_c_m">Terms and Conditions</a> set out by this site, including our Cookie Use.
+				</div>
+			</div>
+			
+			<hr class="colorgraph">
+			<div class="row">
+				<div class="col-xs-12 col-md-6"><input type="submit" value="Register" id="btn-register" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
+			</div>
+		</form>
+	</div>
 </div>
