--- a/public/css/listRecipes.css
+++ b/public/css/listRecipes.css
@@ -1,86 +1,15 @@
-/* carousel */
-#recipe-carousel 
-{
-  padding: 0 10px 30px 10px;
-  margin-top: 30px 0px 0px;
+.recipe{
+  margin-top: 20%; 
+  margin-left: 16%;
+  background: rgba(0, 0, 0, .8);
+  color: whitesmoke;
 }
 
-/* Control buttons  */
-#recipe-carousel .carousel-control
-{
-  background: none;
-  color: #222;
-  font-size: 2.3em;
-  text-shadow: none;
-  margin-top: 30px;
-}
-/* Previous button  */
-#recipe-carousel .carousel-control.left 
-{
-  left: -12px;
-}
-/* Next button  */
-#recipe-carousel .carousel-control.right 
-{
-  right: -12px !important;
-}
-/* Changes the position of the indicators */
-#recipe-carousel .carousel-indicators 
-{
-  right: 50%;
-  top: auto;
-  bottom: 0px;
-  margin-right: -19px;
-}
-/* Changes the color of the indicators */
-#recipe-carousel .carousel-indicators li 
-{
-  background: #c0c0c0;
-}
-#recipe-carousel .carousel-indicators .active 
-{
-  background: #333333;
-}
-#recipe-carousel img
-{
-  width: 250px;
-  height: 100px
-}
-/* End carousel */
-
-
-/**
-  MEDIA QUERIES
-*/
-
-/* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) { 
-    #recipe-carousel 
-    {
-      margin-bottom: 0;
-      padding: 0 40px 30px 40px;
-      margin-top: 30px;
-    }
-    
+.recipe a{
+  color: 	white;
 }
 
-/* Small devices (tablets, up to 768px) */
-@media (max-width: 768px) { 
-    
-    /* Make the indicators larger for easier clicking with fingers/thumb on mobile */
-    
-    #recipe-carousel .carousel-indicators {
-        bottom: -20px !important;  
-    }
-    #recipe-carousel .carousel-indicators li {
-        display: inline-block;
-        margin: 0px 5px;
-        width: 15px;
-        height: 15px;
-    }
-    #recipe-carousel .carousel-indicators li.active {
-        margin: 0px 5px;
-        width: 20px;
-        height: 20px;
-    }
+.ingredients{
+  background: rgba(0, 0, 0, .9);
+  border: 1px solid black;  
 }
