--- a/public/scripts/templates/allRecipes.handlebars
+++ b/public/scripts/templates/allRecipes.handlebars
@@ -41,39 +41,36 @@
     </div>    
 </div>--}}
 
-
 <div>
-  <div class='row'>
-    <div class='col-md-offset-1 col-md-10'>
-      <div class="carousel slide " data-ride="carousel " id="recipe-carousel ">
-        <!-- Bottom Carousel Indicators -->
-        <ol class="carousel-indicators ">
-			{{#each this}}
-			{{#if @first}}
-          <li data-target="#quote-carousel " data-slide-to={{this.id}} class="active"></li>
-		  {{/if}}
-		  {{#unless @first}}
-		  <li data-target="#quote-carousel " data-slide-to={{this.id}}></li>
-		  {{/unless}}
-		  {{/each}}
-        </ol>
-        
-        <!-- Carousel Slides / Quotes -->
-        <div class="carousel-inner ">
-		  {{#each this}}
-		  {{#if @first}}
-		  <div class="item active">
-			  {{/if}}
-			  {{#unless @first}}
-		  <div class="item">
-			  {{/unless}}
-		<div class="recipe media col-xs-12 well ">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+		{{#each this}}
+		{{#if @first}}
+      <li data-target="#myCarousel" data-slide-to={{this.id}} class="active"></li>
+	  {{/if}}
+	  {{#unless @first}}
+      <li data-target="#myCarousel" data-slide-to={{this.id}}></li>
+	  {{/unless}}
+	  {{/each}}
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+{{#each this}}
+{{#if @first}}
+<div class="item active">
+	{{/if}}
+	{{#unless @first}}
+<div class="item">
+	{{/unless}}
+		<div class="recipe media col-xs-8 well ">
 			<div class="media-top ">
 				<img class="d-flex align-self-center mr-3 recipe-image img-circle img-responsive " src="{{this.img}} ">
 			</div>
 			<div class="media-body ">
 				<h3>
-					{{this.name}}
+					<a href="#/recipes/{{this.id}}">{{this.name}}</a>
 					<small>
 						<span class="label label-success ">
 							new
@@ -86,25 +83,29 @@
 						</span>	
 						{{this.preparationTime}} min.
 					</p>
-					<h4>
+					<h4 class="what-do-we-need">
 						<small>
 							<strong>What do you need?</strong>
 						</small>
 					</h4>					
-					<p class="well well-sm ">
+					<p class="well well-sm ingredients">
 						{{#each this.ingredients}} {{this.ingredient}}, {{/each}}
 					</p>
 				</div>
 			</div>
 		</div>
-		</div>
+</div>
 	{{/each}}
-        </div>
-        </div>
-        <!-- Carousel Buttons Next/Prev -->
-        <a data-slide="prev " href="#quote-carousel " class="left carousel-control "><i class="fa fa-chevron-left "></i></a>
-        <a data-slide="next " href="#quote-carousel " class="right carousel-control "><i class="fa fa-chevron-right "></i></a>
-                        
     </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div>
