--- a/public/css/login.css
+++ b/public/css/login.css
@@ -10,7 +10,7 @@
 }
 
 .login{
-  background: rgba(255, 255, 255, .7);    
+  background: rgba(0, 0, 0, .8);    
     /*margin-left: 3%;
     margin-bottom: 1%;*/
     height: 330px;
@@ -18,10 +18,21 @@
 }
 
 .register {
-  background: rgba(255, 255, 255, .7);    
+  background: rgba(0, 0, 0, .8);    
     /*margin-left: 3%;
     margin-bottom: 1%;*/
     margin-top: 6%;
     height: 500px;
     border-radius: 3px;
+}
+
+.button-checkbox{
+  color:white;
+}
+ h2{
+  color: white;
+}
+
+.terms{
+  color: whitesmoke;
 }
