--- a/public/scripts/templates/login.handlebars
+++ b/public/scripts/templates/login.handlebars
@@ -1,4 +1,4 @@
-<div class="row login" style="margin-top:60px">
+<div class="row login" style="margin-top:12%">
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
     	<form role="form">
 			<fieldset>
@@ -6,7 +6,7 @@
 				<hr class="colorgraph">
 				<div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input type="email" name="email" id="tb-username" class="form-control input-lg" placeholder="Username">
+                    <input type="text" name="username" id="tb-username" class="form-control input-lg" placeholder="Username">
 				</div>
 				<div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
