--- a/public/scripts/templates/register.handlebars
+++ b/public/scripts/templates/register.handlebars
@@ -16,10 +16,10 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Display Name" tabindex="3">
+				<input type="email" name="display_name" id="display_name" class="form-control input-lg" placeholder="Email" tabindex="3">
 			</div>
 			<div class="form-group">
-				<input type="email" name="username" id="tb-username" class="form-control input-lg" placeholder="Username" tabindex="4">
+				<input type="text" name="username" id="tb-username" class="form-control input-lg" placeholder="Username" tabindex="4">
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-6">
@@ -34,14 +34,14 @@
                         <input type="checkbox" name="t_and_c" id="t_and_c" value="1"> I Agree
 					</span>
 				</div>
-				<div class="col-xs-8 col-sm-9 col-md-9">
+				<div class="col-xs-8 col-sm-9 col-md-9 terms">
 					 By clicking <strong class="label label-primary">Register</strong>, you agree to the <a href="#" data-toggle="modal" data-target="#t_and_c_m">Terms and Conditions</a> set out by this site, including our Cookie Use.
 				</div>
 			</div>
 			
 			<hr class="colorgraph">
 			<div class="row">
-				<div class="col-xs-12 col-md-6"><input type="submit" value="Register" id="btn-register" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
+				<div class="col-xs-12 col-md-12"><input type="submit" value="Register" id="btn-register" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
 			</div>
 		</form>
 	</div>
