--- a/public/scripts/templates/singleRecipeLoggedUser.handlebars
+++ b/public/scripts/templates/singleRecipeLoggedUser.handlebars
@@ -73,7 +73,7 @@
                     <br/>
                 </div>
                 <div class="col-sm-10">
-                    <button type="submit" class="btn btn-warning">Send comment</button>
+                    <input type="button" class="btn btn-warning" id="btn-send-comment" value="Send comment">
                 </div>
             </fieldset>
         </form>
