--- a/public/scripts/templates/singleRecipeLoggedUser.handlebars
+++ b/public/scripts/templates/singleRecipeLoggedUser.handlebars
@@ -43,6 +43,7 @@
         <h3>Comments</h3>
         <br/>
     </div>
+    <div class="comments-all">
     {{#each this.comments}}
     <div class="row comments">
         <div class="col-sm-10 offset-md-8">
@@ -65,6 +66,7 @@
         </div>
     </div>
     {{/each}}
+    </div>
     <div class="row">
         <form>
             <fieldset>
