Fix register logic

--- a/public/scripts/templates/register.handlebars
+++ b/public/scripts/templates/register.handlebars
@@ -6,17 +6,17 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-6">
 					<div class="form-group">
-                        <input type="text" name="first_name" id="first_name" class="form-control input-lg" placeholder="First Name" tabindex="1">
+                        <input type="text" name="first_name" id="tb-first-name" class="form-control input-lg" placeholder="First Name" tabindex="1">
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6">
 					<div class="form-group">
-						<input type="text" name="last_name" id="last_name" class="form-control input-lg" placeholder="Last Name" tabindex="2">
+						<input type="text" name="last_name" id="tb-last-name" class="form-control input-lg" placeholder="Last Name" tabindex="2">
 					</div>
 				</div>
 			</div>
 			<div class="form-group">
-				<input type="email" name="display_name" id="display_name" class="form-control input-lg" placeholder="Email" tabindex="3">
+				<input type="email" name="display_name" id="tb-email" class="form-control input-lg" placeholder="Email" tabindex="3">
 			</div>
 			<div class="form-group">
 				<input type="text" name="username" id="tb-username" class="form-control input-lg" placeholder="Username" tabindex="4">
