--- a/public/scripts/templates/singleRecipeLoggedUser.handlebars
+++ b/public/scripts/templates/singleRecipeLoggedUser.handlebars
@@ -4,21 +4,20 @@
         </br>
     </div>
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <img src="{{this.img}}" class="img-responsive center-block">
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-2 col-md-offset-3">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
             <br/>
             <img src="../../imgs/like-button.png" id="like-button"> {{this.likes}} likes.
         </div>
-        <div class="col-xs-3 col-md-offset-0">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
             </br>
 
             Preparation Time:
-            <span class="glyphicon glyphicon-time ">
-			</span> {{this.preparationTime}} min.
+            <span class="glyphicon glyphicon-time "></span> {{this.preparationTime}} min.
         </div>
         </br>
     </div>
