--- a/public/scripts/templates/singleRecipeLoggedUser.handlebars
+++ b/public/scripts/templates/singleRecipeLoggedUser.handlebars
@@ -43,40 +43,43 @@
         <br/>
     </div>
     <div class="comments-all">
-    {{#each this.comments}}
-    <div class="row comments">
-        <div class="col-sm-10 offset-md-8">
-            <div class="panel panel-white post panel-shadow">
-                <div class="post-heading">
-                    <div class="pull-left image">
-                        <img src="http://bootdey.com/img/Content/user_1.jpg" class="img-circle avatar" alt="user profile image">
-                    </div>
-                    <div>
-                        <div class="title h5">
-                            <a href="#"><b>{{this.user}}</b></a>
+        {{#each this.comments}}
+        <div class="row comments">
+            <div class="col-xs-1 col-sm-1 col-md-1">
+            </div>
+
+            <div class="col-md-10 offset-md-1">
+                <div class="panel panel-white post panel-shadow">
+                    <div class="post-heading">
+                        <div class="pull-left image">
+                            <img src="http://bootdey.com/img/Content/user_1.jpg" class="img-circle avatar" alt="user profile image">
+                        </div>
+                        <div>
+                            <div class="title h5">
+                                <a href="#"><b>{{this.user}}</b></a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <p>{{this.comment}}</p>
                         </div>
                     </div>
-                    <div class="row">
-                        <p>{{this.comment}}</p>
-                    </div>
-                </div>
 
+                </div>
             </div>
         </div>
-    </div>
-    {{/each}}
+        {{/each}}
     </div>
     <div class="row">
-        <form>
-            <fieldset>
-                <div class="col-sm-10">
-                    <textarea rows="3" id="description" name="description" class="form-control" rows="5" placeholder="Write a comment..."></textarea>
-                    <br/>
-                </div>
-                <div class="col-sm-10">
-                    <input type="button" class="btn btn-warning" id="btn-send-comment" value="Send comment">
-                </div>
-            </fieldset>
-        </form>
+        <div class="col-xs-1 col-sm-1 col-md-1">
+        </div>
+        <div class="col-sm-10 col-md-10">
+            <textarea rows="3" id="description" name="description" class="form-control" placeholder="Write a comment..."></textarea>
+            <br/>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-12">
+            <input type="button" class="btn btn-warning" id="btn-send-comment" value="Send comment">
+        </div>
+
     </div>
 </div>
