--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,9 @@
     margin-left: 70px;
 }
 
+.navbar{
+	width: 101%;
+}
 .menu-item-left {
     display: inline;
     margin: 20px
@@ -51,10 +54,22 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
 }
 
-body {
-    background-image: url("../imgs/background.jpg");
+/*body {
+    background: url("../imgs/background.jpg");
+	background-position: center fixed;
+	max-width: 100vw;
+	max-height: 100vh;
     background-size: 100%;
     background-repeat: repeat;
+}*/
+
+body { 
+	width: 99%;
+background-image: url("../imgs/background.jpg"); 
+-webkit-background-size: cover;
+-moz-background-size: 100%;
+-o-background-size: cover;
+background-size: 100%;
 }
 
 #btn-search{
