--- a/public/css/main.css
+++ b/public/css/main.css
@@ -96,3 +96,20 @@ background-size: 100%;
 	right: 3%;
 	top: 8%;
 }
+
+.welcome-msg{
+	color: white;
+	text-align: center;
+	font-size: 36pt;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	background: rgba(0, 0, 0, .7);
+	border: 1px solid black;
+	border-radius: 3px;
+	margin-top: 23%;
+	margin-left: 20%;
+	width: 80%;
+}
+
+.welcome-msg > p{
+	font-size: 18pt;
+}
