--- a/public/scripts/templates/login.handlebars
+++ b/public/scripts/templates/login.handlebars
@@ -1,13 +1,13 @@
 <div class="row login" style="margin-top:12%">
-	<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+	<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6  col-md-offset-3">
 		<fieldset>
 			<h2>Please Log In</h2>
 			<hr class="colorgraph">
-			<div class="input-group">
+			<div class="input-group panel">
 				<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
 				<input type="text" name="username" id="tb-username" class="form-control input-lg" placeholder="Username">
 			</div>
-			<div class="input-group">
+			<div class="input-group panel">
 				<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
 				<input type="password" name="password" id="tb-pass" class="form-control input-lg" placeholder="Password">
 			</div>
