about page cleaned up
Signed-off-by: stoychevvasko <stoychev.vassil@gmail.com>

--- a/public/scripts/templates/about.handlebars
+++ b/public/scripts/templates/about.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron fluid-jumbotron">
+<div class="jumbotron fluid-jumbotron panel-default">
 	<img alt="logo" class="menu-link" id="logo" src="imgs/logo-text.png">
 	<div class="container">
 		<h1 class="display-2">About</h1>
