--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,21 +47,8 @@
 }
 
 #logo:hover {	
-	border: 5px solid #fa4778;
-	background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 10%, rgba(255,255,255,1) 46%, rgba(255,255,255,1) 59%, rgba(255,255,255,1) 100%);
-	background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,1) 46%,rgba(255,255,255,1) 59%,rgba(255,255,255,1) 100%);
-	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,1) 46%,rgba(255,255,255,1) 59%,rgba(255,255,255,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
+	border: 5px solid #fa4778;	
 }
-
-/*body {
-    background: url("../imgs/background.jpg");
-	background-position: center fixed;
-	max-width: 100vw;
-	max-height: 100vh;
-    background-size: 100%;
-    background-repeat: repeat;
-}*/
 
 body { 
 width: 98%;
@@ -79,17 +66,8 @@ background-size: 100%;
 }
 
 .jumbotron {
-	background: -moz-linear-gradient(left, rgba(255,255,255,0.78) 0%, rgba(255,255,255,0.78) 42%, rgba(255,255,255,0) 90%, rgba(255,255,255,0) 100%);
-	background: -webkit-linear-gradient(left, rgba(255,255,255,0.78) 0%,rgba(255,255,255,0.78) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
-	background: linear-gradient(to right, rgba(255,255,255,0.78) 0%,rgba(255,255,255,0.78) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c7ffffff', endColorstr='#00ffffff',GradientType=1 );
-}
-
-.jumbotron:hover {
-	background: -moz-linear-gradient(left, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.9) 42%, rgba(255,255,255,0) 90%, rgba(255,255,255,0) 100%);
-	background: -webkit-linear-gradient(left, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.9) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
-	background: linear-gradient(to right, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.9) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6ffffff', endColorstr='#00ffffff',GradientType=1 );
+	background: rgba(0, 0, 0, .8);
+	color: whitesmoke;	
 }
 
 .toastr-possition{
